text image background slice updated - background-attachement changed from fixed to scroll for mobile devices to overcome large image on IOS devices

--- a/app/styles/_slice_affinity_text_image_bg.scss
+++ b/app/styles/_slice_affinity_text_image_bg.scss
@@ -45,6 +45,7 @@
   }
   @media (min-width: $breakpoint-sm) {
 
+    background-attachment: scroll;
     padding-top: 70px;
     height: 500px;
   }
